--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ role-tables:
 	src="https://gradio.s3-us-west-2.amazonaws.com/4.41.0/gradio.js"
 ></script>
 
-<gradio-app src="https://susiecn-slices.hf.space" theme_mode="light"></gradio-app>
+<gradio-app src="https://SusieCheang-CN.hf.space" theme_mode="light"></gradio-app>
 
 <gradio-app src="https://susiecn-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
 
