--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ role-tables:
 
 <gradio-app src="https://SusieCheang-CN.hf.space" theme_mode="light"></gradio-app>
 
-<gradio-app src="https://susiecn-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
+<gradio-app src="https://SusieCheang-CN-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
 
 
 <section>
