--- a/index.html
+++ b/index.html
@@ -1,72 +1,29 @@
----
-layout: default
-title: Home
-notitle: true
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <title>我的个人网站</title>
+  <link rel="stylesheet" href="style.css">  <!-- 链接你的 CSS 文件 -->
+</head>
+<body>
+  <header>
+    <h1>[Susie]</h1>  <!-- Susie -->
+    <img src="images/Susie.jpg" alt="Susie" width="150"> <!-- 替换为你的照片路径和文件名 -->
+  </header>
 
-# groups of columns of {roles: list, width: num, image: bool}
-role-tables:
-- - roles: [faculty, postdoc, staff]
-    width: 4
-    image: true
-  - roles: [grad]
-    width: 8
-    image: true
-- - roles: [collab, ugrad, ugrad-alum]
-    width: 5
-    image: false
-  - roles: [alum]
-    width: 7
-    image: false
-
----
-
-<div class="jumbotron">
-    <p>
-        <b>肖航课题组</b>开发了首个<b>基于字符串的可逆晶体表示法: SLICES</b>,实现了生成式AI驱动的<b>Text2Crystal</b>。SLICES有望成为AI驱动的晶体材料逆向设计的标准工具,即<b>晶体材料的"SMILES"</b>。 
-    </p>
-    <p>
-    The <b>XIAO Research Group</b> developed the first <b>string-based invertible, invariant crystallographic representation: SLICES</b>, achieving <b>Text2Crystal</b> powered by generative AI. SLICES has the potential to become a standard tool for <i> in-silico </i> materials discovery, i.e. "SMILES" for crystal structures.
-    </p>
-</div>
-
-<script
-	type="module"
-	src="https://gradio.s3-us-west-2.amazonaws.com/4.41.0/gradio.js"
-></script>
-
-<gradio-app src="https://SusieCheang-CN.hf.space" theme_mode="light"></gradio-app>
-
-<gradio-app src="https://SusieCheang-CN-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
-
-
-<section>
-    <h2>News</h2>
-    <ul class="news list-unstyled">
-        {% for post in site.posts limit: site.front_page_news %}
-            {% include news-item.html item=post %}
-        {% endfor %}
+  <section id="introduction">
+    <h2>关于我</h2>
+    <p>[我的个人简介，可以使用 Markdown 格式]</p>  <!-- 我的个人简介 -->
+    <p>联系方式：</p>
+    <ul>
+      <li>邮箱：<a href="mailto:[你的邮箱]">[你的邮箱]</a></li> <!-- 你的邮箱 -->
+      <li>GitHub: <a href="https://github.com/[你的GitHub ID]">[你的GitHub ID]</a></li> <!-- 你的 GitHub 链接 -->
+      <!-- 添加其他社交媒体链接 -->
     </ul>
-    {% assign numposts = site.posts | size %}
-    {% if numposts >= 1 %}
-        <p>
-            <span class="fa fa-fw fa-history"></span>
-            <a href="{{ site.base }}/blog.html">Older posts&hellip;</a>
-        </p>
-    {% endif %}
-</section>
+  </section>
 
+  <!-- 其他网站内容 -->
 
-<div id="people">
-    <h2>People</h2>
-    {% for role-table in page.role-tables %}
-        <section class="people row justify-content-between">
-            {% for role-column in role-table %}
-                <div class="col-md-{{ role-column.width }}">
-                    {% for role in role-column.roles %}
-                        {% include role-people.html role=role image=role-column.image %}
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </section>
-    {% endfor %}
-</div>
+  <script src="script.js"></script> <!-- 链接你的 JavaScript 文件 -->
+</body>
+</html>
