--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <section id="introduction">
     <h2>关于我</h2>
-    <p>[我的个人简介，可以使用 Markdown 格式]</p>  <!-- 我的个人简介 -->
+    <p>[我来自澳门，是一位金融从业人员，我喜欢身心灵成长]</p>  <!-- 我的个人简介 -->
     <p>联系方式：</p>
     <ul>
-      <li>邮箱：<a href="mailto:[你的邮箱]">[你的邮箱]</a></li> <!-- 你的邮箱 -->
-      <li>GitHub: <a href="https://github.com/[你的GitHub ID]">[你的GitHub ID]</a></li> <!-- 你的 GitHub 链接 -->
+      <li>邮箱：<a href="mailto:[susiecnsusie@gmail.com]">[susiecnsusie@gmail.com]</a></li> <!-- susiecnsusie@gmail.com -->
+      <li>GitHub: <a href="https://github.com/[susiecn]">[susiecn]</a></li> <!-- 你的 GitHub 链接 -->
       <!-- 添加其他社交媒体链接 -->
     </ul>
   </section>
