--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>[Susie]</h1>  <!-- Susie -->
-    <img src="images/Susie.jpg" alt="Susie" width="150"> <!-- 替换为你的照片路径和文件名 -->
+    <img src="images/new.jpg" alt="Susie" width="150"> <!-- 替换为你的照片路径和文件名 -->
   </header>
 
   <section id="introduction">
