--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>我的个人网站</title>
+  <title>Welcome to the page of Interesting Soul</title>
   <link rel="stylesheet" href="style.css">  <!-- 链接你的 CSS 文件 -->
 </head>
 <body>
   <header>
     <h1>[Susie]</h1>  <!-- Susie -->
-    <img src="images/new.jpg" alt="Susie" width="150"> <!-- 替换为你的照片路径和文件名 -->
+    <img src="img/new.jpg" alt="new" width="150"> <!-- 替换为你的照片路径和文件名 -->
   </header>
 
   <section id="introduction">
