--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to the page of Interesting Soul</title>
+  <title>Welcome to My Page</title>
   <link rel="stylesheet" href="style.css">  <!-- 链接你的 CSS 文件 -->
 </head>
 <body>
   <header>
-    <h1>[Susie]</h1>  <!-- Susie -->
+    <h1>[Susie Cheang Nga]</h1>  <!-- Susie -->
     <img src="img/new.jpg" alt="new" width="150"> <!-- 替换为你的照片路径和文件名 -->
   </header>
 
