--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>[Susie Cheang Nga]</h1>  <!-- Susie -->
-    <img src="img/new.jpg" alt="new" width="150"> <!-- 替换为你的照片路径和文件名 -->
+    <img src="img/susie.jpg" alt="susie" width="150"> <!-- 替换为你的照片路径和文件名 -->
   </header>
 
   <section id="introduction">
